--- a/css/components/forms/input.css
+++ b/css/components/forms/input.css
@@ -60,10 +60,9 @@ input:not([type])) {
 }
 
 .input-main:focus {
-    border-color: var(--color-main);
-    border-width: 2px;
-    padding: 7px 15px;
-    outline: none;
+    outline: 2px solid var(--color-main);
+    outline-offset: -2px;
+    border-color: transparent;
 }
 
 .input-main:disabled {
